[metadata]
name = gitMigrator
version = 0.0.1
description = gitMigrator python module
author = Dor Shalom
author_email = dor.shalom@redis.com
long_description = gitMigrator helps moving files between git repositories while preserving history.
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
install_requires =
    gitPython
    git_filter_repo
